--- a/HTML/Assignment/Assignment-2/Calculator/style.css
+++ b/HTML/Assignment/Assignment-2/Calculator/style.css
@@ -16,6 +16,8 @@ body{
     gap: 1.6px;
     justify-content: center;
     border-radius: 0.2cm;
+    gap: 5px;
+    overflow: hidden;
     
 }
 .display{
